src/index.css
/* ... */
.Sec3-card-tital span svg {
  width: 25px;
  cursor: pointer;
}

.Sec3-card-slider .slick-slider {
  padding-bottom: 40px;
}

.Sec3-card-slider .slick-list .slick-slide > div {
  padding: 0 15px;
}

.Sec3-card-slider-arrows {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.Sec3-card-slider-arrow-left,
.Sec3-card-slider-arrow-right {
  border: 0;
  outline: none;
  background-color: transparent;
}

/* Sec________Styling________Css */
/* Sec________Styling________Css */
/* Sec________Styling________Css */

/* Faq________Styling________Css */
/* Faq________Styling________Css */
/* Faq________Styling________Css */

section.faq--flight--sec {
  width: 100%;
  padding: 80px 0px 75px 0px;
}

.faq--heading h1 {
  font-family: "Rubik";
  font-size: 32px;
  font-weight: 700;
  line-height: 37.92px;
}

.faqs--description {
  padding-top: 45px;
  width: 100%;
}

.faq--1 {
  width: 100%;
  padding: 30px 30px 34px 30px;
  background: #ffffff;
  box-shadow: 6px 12px 49px 0px #0000000f;
  margin-bottom: 20px;
  cursor: pointer;
}

.faq--1--heading h1 {
  font-family: "Rubik";
  font-size: 16px;
  font-weight: 700;
  line-height: 18.96px;
  padding-bottom: 24px;
}

.faq--1--paragraph p {
  font-family: "Rubik";
  font-size: 16px;
  font-weight: 300;
  line-height: 18.96px;
  padding-top: 24px;
  color: #8c8e90;
}

.faq--item--paragraph a {
  font-family: "Rubik";
  font-size: 16px;
  font-weight: 400;
  line-height: 18.96px;
  text-decoration-line: underline;
  text-decoration-style: solid;
  color: #4499c0;
}

.faq--item--heading {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Faq________Styling________Css */
/* Faq________Styling________Css */
/* Faq________Styling________Css */

/* Sec4________Styling________Css */
/* Sec4________Styling________Css */
/* Sec4________Styling________Css */

section.Sec4-sec {
  width: 100%;
  padding: 80px 0px;
  height: 520px;
  background: #f2faff;
}

.Sec4-sec--main {
  width: 100%;
}

.Sec4-sec--title h2 {
  font-family: "Rubik";
  font-size: 32px;
  font-weight: 700;
  line-height: 37.92px;
  padding-bottom: 50px;
}

.Sec4-tabs {
  width: 100%;
  display: flex;
  justify-content: flex-start;
  gap: 20px;
  flex-wrap: wrap;
  padding-bottom: 50px;
}

.tab-button {
  cursor: pointer;
  background: #dbdbdb33;
  transition: all 0.3s ease;
  border: 1.37px solid #dbdbdb;
  font-family: "Rubik";
  font-size: 17px;
  font-weight: 400;
  line-height: 23.7px;
  color: #939393;
  padding: 10px 32px;
  border-radius: 50px;
}

.tab-button.active {
  background: #e2f2fb;
  color: #50add8;
  font-weight: 500;
}

.tab-button:hover {
  background-color: #e2f2fb;
  color: #50add8;
  border: 1.37px solid #50add8;
}

.tab-content {
  list-style: none;
  padding: 0;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 10px;
  width: 100%;
}

.tab-content li {
  font-family: "Rubik";
  font-size: 18px;
  font-weight: 400;
  line-height: 21.33px;
  text-align: left;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
  color: #000000;
  padding-bottom: 35px;
  cursor: pointer;
}

/* Sec4________Styling________Css */
/* Sec4________Styling________Css */
/* Sec4________Styling________Css */

/* Footer________Styling________Css */
/* Footer________Styling________Css */
/* Footer________Styling________Css */

footer {
  width: 100%;
  background: #353978;
}

.main-footer {
  width: 100%;
}

.footer--main--top {
  width: 100%;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  padding-top: 65px;
  padding-bottom: 50px;
}

.Footer-main-1 {
  width: 25%;
}

.footer--logo {
  width: 75%;
}

.footer--logo img {
  width: 100%;
}

.footer--text {
  width: 100%;
  padding: 20px 0px 50px 0px;
}

.footer--text p {
  color: #fff;
  font-family: "Rubik";
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  /* 133.333% */
}

.footer--social--logo {
  width: 100%;
  display: flex;
  align-items: center;
  gap: 25px;
  padding-top: 3%;
}

.socail--logos {
  width: 40px;
  height: 40px;
}

.socail--logos img {
  width: 100%;
  height: 100%;
  border-radius: 50px;
  object-fit: cover;
}

.Footer-main-2 {
  width: 70%;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}

.footer-ul-list-box {
  width: 24%;
}

.footer-ul-list-box h3 {
  color: #fff;
  font-family: "Rubik";
  font-size: 18px;
  font-style: normal;
  font-weight: 600;
  line-height: 28px;
  /* 155.556% */
  padding-bottom: 25px;
}

.footer-ul-list-box ul {
  width: 100%;
  display: flex;
  flex-direction: column;
  margin: 0px;
  padding-left: 0px;
}

.footer-ul-list-box ul li {
  list-style: none;
  color: #fff;
  font-family: "Rubik";
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 48px;
  /* 266.667% */
  text-transform: capitalize;
}

.footer-ul-list-box ul a {
  text-decoration: none;
}

.more-with-input {
  width: 38%;
}

.more-with-input-group {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  position: relative;
  padding-bottom: 35px;
}

.more-with-input-group input {
  width: 100%;
  border: none;
  border-bottom: 0.5px solid #fff;
  background: transparent;
  padding: 15px 20px;
  outline: none;
}

.more-with-input-group button {
  position: absolute;
  width: 30px;
  height: 30px;
  border-radius: 50px;
  border: none;
  cursor: pointer;
}

.more-with-input-group button svg {
  width: 20px;
  height: 20px;
}

.wheather-box {
  width: 70%;
}

.wheather-box img {
  width: 100%;
}

.footer--main--bottom {
  width: 100%;
  padding: 20px 0px;
  border-top: 1px solid #b6b6b6;
}

.footer--main--bottom p {
  color: #fff;
  font-family: "Rubik";
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: 26px;
  /* 130% */
  text-align: center;
}
/* ... */

